--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>970x250</title>
     <meta name="ad.size" content="width=300,height=600">
-    <link rel="stylesheet" href="css/banner.css">
+    <link rel="stylesheet" href="banner.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.2/TweenMax.min.js"></script>
     <script type="text/javascript">
         var clickTag = "#";
